--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Pranjal Kumar Nandi"
   pronouns         : # example: "she/her"  
   bio              : "Machine Learning Engineer"
-  location         : #"Dhaka, Bangladesh"
-  employer         : #"Therap (BD) Ltd."
+  location         : "Dhaka, Bangladesh"
+  employer         : "Therap (BD) Ltd."
   uri              : # URL
   email            : "pknandi130@gmail.com" 
 
@@ -60,7 +60,7 @@ author:
   lastfm           : # Username
   linkedin         : "pranjal-kumar-nandi"
   mastodon         : # URL
-  medium           : # URL
+  medium           : "https://medium.com/@pknandi130"
   pinterest        : # Username
   soundcloud       : # Username
   steam            : # Username
@@ -82,6 +82,8 @@ publication_category:
     title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+  patents:
+    title: 'Patents'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
