--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,32 +1,18 @@
-# The following is the order of the links in the header of the website.
-#
-# Changing the order here will adjust the order and you can also add additional
-# links. Removing a link prevents it from showing in the header, but does not
-# prevent it from being included in the site.
-
 main:
   - title: "Home"
     url: /
+
   - title: "Publications"
     url: /publications/
-  
-  - title: "Projects"
-    url: /projects/ 
-
-  # - title: "Talks"
-  #   url: /talks/    
-
-  # - title: "Teaching"
-  #   url: /teaching/    
     
-  # - title: "Portfolio"
-  #   url: /portfolio/
-        
-  # - title: "Blog Posts"
-  #   url: /year-archive/
+  - title: "Experience"
+    url: /experience/
+
+  - title: "Projects"
+    url: /projects/
+  
+  - title: "Education & Awards"
+    url: /education-awards/
     
   - title: "CV"
     url: /cv/
-    
-  # - title: "Guide"
-  #   url: /markdown/
